# netspeed-lite

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  metrics.rs  notifier.rs  runner.rs  scheduler.rs  server.rs
tests/: config_tests.rs  integration_tests.rs  notifier_tests.rs  runner_tests.rs  scheduler_tests.rs
tests/fixtures/: speedtest_sample.json
