[package]
name = "netspeed-lite"
version = "0.1.5"
edition = "2021"
authors = ["Satya"]
description = "ISP speed monitor with Prometheus metrics and ntfy notifications"
license = "Apache-2.0"
repository = "https://github.com/mlgruby/netspeed-lite"
keywords = ["speedtest", "monitoring", "prometheus", "metrics", "notifications"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "netspeed-lite"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "net", "signal", "process", "time", "sync", "io-util"] }

# HTTP server
axum = "0.8"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics
prometheus = "0.14"

# Time handling
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.15.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
serial_test = "3.3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
